# JSON-Logic-ASP

./: .deepsource.toml  .gitignore  .pytest-tests.ini  .pytest-tests_integ.ini  .readthedocs.yaml  LICENSE  Makefile  README.md  deepsource.toml  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: semantic.yml
.github/workflows/: ci.yml  pr.yml  publish.yml
docs/: changelog.md  index.md  versions.json
docs/evaluator/: index.md
docs/invoker/: index.md  run.md
docs/simplifier/: index.md  simplify.md
docs/translator/: data_generator.md  eval_translator.md  index.md  rule_generator.md
json_logic_asp/: __init__.py  evaluator.py
json_logic_asp/adapters/asp/: asp_literals.py  asp_statements.py
json_logic_asp/adapters/json_logic/: jl_array_nodes.py  jl_boolean_nodes.py  jl_data_nodes.py  jl_helper_nodes.py  jl_logic_nodes.py
json_logic_asp/constants/: asp_naming.py  json_logic_ops.py  loggers.py
json_logic_asp/invoker/: __init__.py  run.py
json_logic_asp/models/: asp_base.py  clingo_dto.py  json_logic_nodes.py  translator_dto.py
json_logic_asp/sdk/: clingo_sdk.py
json_logic_asp/simplifier/: __init__.py  node_simplifier.py  simplify.py
json_logic_asp/translator/: __init__.py  data_generator.py  eval_translator.py  rule_generator.py  statement_generator.py
json_logic_asp/translator/adapters/asp/: asp_nodes.py  asp_statements.py
json_logic_asp/translator/adapters/json_logic/: jl_array_nodes.py  jl_boolean_nodes.py  jl_data_nodes.py  jl_logic_nodes.py
json_logic_asp/translator/models/: asp_base.py  asp_nodes.py  asp_statements.py  jl_base.py  jl_nodes.py  jl_ops.py  multi_translate.py  translator.py
json_logic_asp/utils/: id_management.py  json_logic_helpers.py  list_utils.py
tests/: dummy.txt  fixtures.py  test_demo.py  test_evaluator.py
tests/test_adapters/test_asp/: test_asp_literals.py  test_asp_statements.py
tests/test_adapters/test_json_logic/: conftest.py  test_jl_array_nodes.py  test_jl_boolean_nodes.py  test_jl_data_nodes.py  test_jl_helper_nodes.py  test_jl_logic_nodes.py
tests/test_invoker/: test_run.py
tests/test_models/: test_asp_base.py  test_clingo_dto.py  test_json_logic_nodes.py  test_translator_dto.py
tests/test_sdk/: test_clingo_sdk.py
tests/test_simplifier/: test_node_simplifier.py  test_simplify.py
tests/test_simplifier/test_node_simplifiers/: test_simplify_and_or_nodes.py  test_simplify_negation_nodes.py
tests/test_translator/: test_data_generator.py  test_eval_translator.py  test_rule_generator.py
tests/test_utils/: test_id_management.py  test_json_logic_helpers.py  test_list_utils.py
tests_integ/: test_translation.py
tests_integ/test_data_translations/: simple.json  simple.lp
tests_integ/test_rule_translations/: simple.json  simple.lp
