[tool.poetry]
name = "json-logic-asp"
version = "0.1.0"
description = ""
authors = ["Diego Barreiro Perez <diego@barreiro.xyz>"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "json_logic_asp" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
cuid2 = "^2.0.0"
pydantic = "^2.5.2"
# Newer version added extra safeguards which slowdown Gringo grounding, need further investigation...
clingo = "5.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
bandit = { extras = ["toml"], version = "^1.7.6" }
xenon = "^0.9.1"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov json_logic_asp/ --cov-report html --cov-report term"
testpaths = [
    "tests",
]
log_level = "DEBUG"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
